# mchmapping

./: .gitignore  CMakeLists.txt  README.md  mchmapping-config.cmake  spack.yaml
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
src/Impl4/: CMakeLists.txt
src/Impl4/src/: CathodeSegmentationCImpl4.cxx  CathodeSegmentationCreator.cxx  CathodeSegmentationImpl4.cxx
src/Interface/: CMakeLists.txt
src/bindings/: CMakeLists.txt  python-bindings.cxx  test_segmentation.py
