if(BUILD_PYTHON_BINDINGS)
  find_package(Python COMPONENTS Interpreter Development REQUIRED)
endif()
find_package(gsl-lite QUIET)
if(NOT gsl-lite_FOUND)
    find_package(Microsoft.GSL REQUIRED)
    set(GSL Microsoft.GSL::GSL)
else()
    set(GSL gsl::gsl-lite-v1)
    target_compile_definitions(MCHMappingImpl4 WITH_GSL_LITE)
endif()
find_package(Boost REQUIRED)
find_package(fmt REQUIRED)

